--- a/client/src/ui/dialogs/login_dialog.ui
+++ b/client/src/ui/dialogs/login_dialog.ui
@@ -317,6 +317,8 @@
   <tabstop>connectionsComboBox</tabstop>
   <tabstop>saveButton</tabstop>
   <tabstop>deleteButton</tabstop>
+  <tabstop>hostnameLineEdit</tabstop>
+  <tabstop>portSpinBox</tabstop>
   <tabstop>loginLineEdit</tabstop>
   <tabstop>passwordLineEdit</tabstop>
   <tabstop>testButton</tabstop>
