fix Bug #2951: "Add cameras to Server" dialog should NOT be closed by
Enter

<==== Mercurial data ====>
Branch: release_2.2

--- a/client/src/ui/dialogs/camera_addition_dialog.ui
+++ b/client/src/ui/dialogs/camera_addition_dialog.ui
@@ -686,6 +686,9 @@
        <property name="text">
         <string>Cl&amp;ose</string>
        </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
       </widget>
      </item>
     </layout>
