--- a/wixsetup/maven/filter-resources/Associations.wxs
+++ b/wixsetup/maven/filter-resources/Associations.wxs
@@ -8,7 +8,7 @@
               <RegistryValue Root="HKCR" Type="string" Key="HDW.nov\DefaultIcon" Value="&quot;[#client.exe]&quot;" />
               <RegistryValue Root="HKCR" Type="string" Key=".nov" Value="HDW.nov" />
               
-              <RegistryValue Root="HKLM" Key="SOFTWARE\Classes\SystemFileAssociations\.nov\shell\play.${product.name}.exe" Value="Play with ${product.name}" Type="string" />
+              <RegistryValue Root="HKLM" Key="SOFTWARE\Classes\SystemFileAssociations\.nov\shell\play.${product.name}.exe" Value="!(loc.Associations_PlayWith)" Type="string" />
               <RegistryValue Root="HKLM" Key="SOFTWARE\Classes\SystemFileAssociations\.nov\shell\play.${product.name}.exe\command" Value="&quot;[#client.exe]&quot; &quot;%1&quot;" Type="string" />
 
               <RegistryValue Root="HKCR" Type="string" Key="Applications\${product.name}.exe\SupportedTypes" Name=".nov" Value=""/>
