--- a/wixsetup/maven/filter-resources/ClientDlg.wxs
+++ b/wixsetup/maven/filter-resources/ClientDlg.wxs
@@ -24,7 +24,7 @@
     <Control Id="BottomLine" Type="Line" X="0" Y="234" Width="370" Height="2" />
     <Control Id="Description" Type="Text" X="25" Y="23" Width="280" Height="15" Transparent="yes" NoPrefix="yes" Text="!(loc.FeaturesDlgDescription)" />
     <Control Id="Title" Type="Text" X="15" Y="6" Width="210" Height="15" Transparent="yes" NoPrefix="yes" Text="!(loc.FeaturesDlgTitle)" />
-    <Control Id="groupBox1" Type="GroupBox" Height="39" Width="351" X="10" Y="50" Text="Shortcuts" />
+    <Control Id="groupBox1" Type="GroupBox" Height="39" Width="351" X="10" Y="50" Text="!(loc.ClientDlg_Shortcut)" />
     <Control Id="checkBox2" Type="CheckBox" Height="18" Width="332" X="25" Y="64" Text="Place Shortcut on Desktop" Property="INSTALL_SHORTCUT_DESKTOP" CheckBoxValue="1" />
 </Dialog>
 		</UI>
