--- a/wixsetup/maven/filter-resources/DowngradeWarningDlg.wxs
+++ b/wixsetup/maven/filter-resources/DowngradeWarningDlg.wxs
@@ -13,7 +13,7 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <Fragment>
         <UI>
-      <Dialog Id="DowngradeWarningDlg" Width="370" Height="270" Title="[ProductName] Setup" NoMinimize="no">
+      <Dialog Id="DowngradeWarningDlg" Width="370" Height="270" Title="!(loc.StdString_SetupTitle)" NoMinimize="no">
 
         <Control Id="Next" Type="PushButton" X="236" Y="243" Width="56" Height="17" Default="yes" Text="!(loc.WixUINext)" >
           <Publish Event="EndDialog" Value="Exit">1</Publish>
@@ -24,9 +24,9 @@
           <Publish Event="SpawnDialog" Value="CancelDlg">1</Publish>
         </Control>
 
-        <Control Id="Description" Type="Text" X="25" Y="23" Width="280" Height="15" Transparent="yes" NoPrefix="yes" Text="A later version of [ProductName] is already installed." />
+        <Control Id="Description" Type="Text" X="25" Y="23" Width="280" Height="15" Transparent="yes" NoPrefix="yes" Text="!(loc.DowngradeWarningDlg_DowngradeWarning)" />
         <!--<Control Id="Title" Type="Text" X="15" Y="6" Width="200" Height="15" Transparent="yes" NoPrefix="yes" Text="WARNING" />-->
-        <Control Id="BannerBitmap" Type="Icon" X="344" Y="10" TabSkip="no" Text="Warning" Width="24" Height="24"/>
+        <Control Id="BannerBitmap" Type="Icon" X="344" Y="10" TabSkip="no" Text="!(loc.StdString_Warning)" Width="24" Height="24"/>
         <Control Id="BannerLine" Type="Line" X="0" Y="44" Width="370" Height="0" />
         <Control Id="BottomLine" Type="Line" X="0" Y="234" Width="370" Height="0" />
       </Dialog>
