--- a/wixsetup/maven/filter-resources/MediaServerDlg.wxs
+++ b/wixsetup/maven/filter-resources/MediaServerDlg.wxs
@@ -14,22 +14,22 @@
     <Fragment>
         <UI>
             <Dialog Id="MediaServerDlg" Width="370" Height="270" Title="!(loc.InstallDirDlg_Title)">
-													<Control Id="HostLabel" Type="Text" Height="17" Width="32" X="25" Y="68" Text="Host" />
+													<Control Id="HostLabel" Type="Text" Height="17" Width="32" X="25" Y="68" Text="!(loc.MediaServerDlg_Host)" />
 													<Control Id="Host" Type="Edit" Height="15" Width="182" X="75" Y="65" Property="SERVER_APPSERVER_HOST" />
-													<Control Type="Text" Id="PortLabel" Width="21" Height="17" X="269" Y="68" Text="Port" />
+													<Control Type="Text" Id="PortLabel" Width="21" Height="17" X="269" Y="68" Text="!(loc.MediaServerDlg_AppserverPort)" />
 													<Control Type="Edit" Id="Port" Width="55" Height="15" X="296" Y="67" Property="SERVER_APPSERVER_PORT" />
-													<Control Type="Text" Id="LoginLabel" Width="32" Height="17" X="25" Y="92" Text="Login" />
+													<Control Type="Text" Id="LoginLabel" Width="32" Height="17" X="25" Y="92" Text="!(loc.MediaServerDlg_Login)" />
 													<Control Type="Edit" Id="Login" X="75" Y="89" Width="101" Height="15" Property="SERVER_APPSERVER_LOGIN" />
-													<Control Type="Text" Id="PasswordLabel" Width="46" Height="15" X="190" Y="92" Text="Password" />
+													<Control Type="Text" Id="PasswordLabel" Width="46" Height="15" X="190" Y="92" Text="!(loc.MediaServerDlg_Password)" />
 													<Control Type="Edit" Id="Password" Width="111" Height="15" X="241" Y="89" Property="SERVER_APPSERVER_PASSWORD" Password="yes" />
-													<Control Id="groupBox1" Type="GroupBox" Height="66" Width="345" X="15" Y="49" Text="Enterprise Controller" />
+													<Control Id="groupBox1" Type="GroupBox" Height="66" Width="345" X="15" Y="49" Text="!(loc.MediaServerDlg_EnterpriseController)" />
 													<Control Id="Next" Type="PushButton" X="236" Y="243" Width="56" Height="17" Default="no" Text="!(loc.WixUINext)" />
 													<Control Id="Back" Type="PushButton" X="180" Y="243" Width="56" Height="17" Text="!(loc.WixUIBack)" />
 													<Control Id="Cancel" Type="PushButton" X="304" Y="243" Width="56" Height="17" Cancel="no" Text="!(loc.WixUICancel)">
 														<Publish Event="SpawnDialog" Value="CancelDlg">1</Publish>
 													</Control>
 													<Control Id="Description" Type="Text" X="25" Y="23" Width="280" Height="15" Transparent="yes" NoPrefix="yes" />
-													<Control Id="Title" Type="Text" X="15" Y="6" Width="200" Height="15" Transparent="yes" NoPrefix="yes" Text="Media Server Configuration" />
+													<Control Id="Title" Type="Text" X="15" Y="6" Width="200" Height="15" Transparent="yes" NoPrefix="yes" Text="!(loc.MediaServerDlg_MediaServerConfig)" />
 													<Control Id="BannerBitmap" Type="Bitmap" X="0" Y="0" Width="370" Height="44" TabSkip="no" Text="!(loc.InstallDirDlgBannerBitmap)" />
 													<Control Id="BannerLine" Type="Line" X="0" Y="44" Width="370" Height="2" />
 													<Control Id="BottomLine" Type="Line" X="0" Y="234" Width="370" Height="2" />
