--- a/wixsetup/maven/filter-resources/PasswordDlg.wxs
+++ b/wixsetup/maven/filter-resources/PasswordDlg.wxs
@@ -10,18 +10,18 @@
                 <Control Id="Cancel" Type="PushButton" X="304" Y="243" Width="56" Height="17" Cancel="no" Text="!(loc.WixUICancel)">
                     <Publish Event="SpawnDialog" Value="CancelDlg">1</Publish>
                 </Control>
-                <Control Id="Description" Type="Text" X="25" Y="23" Width="280" Height="15" Transparent="yes" NoPrefix="yes" Text="Please enter administrator password" />
-                <Control Id="Title" Type="Text" X="15" Y="6" Width="200" Height="15" Transparent="yes" NoPrefix="yes" Text="Administrator credentials" />
+                <Control Id="Description" Type="Text" X="25" Y="23" Width="280" Height="15" Transparent="yes" NoPrefix="yes" Text="!(loc.PasswordDlg_DescriptionLabel)" />
+                <Control Id="Title" Type="Text" X="15" Y="6" Width="200" Height="15" Transparent="yes" NoPrefix="yes" Text="!(loc.PasswordDlg_TitleLabel)" />
                 <Control Id="BannerBitmap" Type="Bitmap" X="0" Y="0" Width="370" Height="44" TabSkip="no" Text="!(loc.InstallDirDlgBannerBitmap)" />
                 <Control Id="BannerLine" Type="Line" X="0" Y="44" Width="370" Height="2" />
                 <Control Id="BottomLine" Type="Line" X="0" Y="234" Width="370" Height="2" />
-                <Control Id="groupBox1" Type="GroupBox" Height="76" Width="351" X="9" Y="49" Text="Administrator credentials" />
+                <Control Id="groupBox1" Type="GroupBox" Height="76" Width="351" X="9" Y="49" Text="!(loc.PasswordDlg_GroupBox)" />
                 <Control Id="logintextBox" Type="Edit" Height="15" Width="140" X="112" Y="64" Text="admin" Property="DUMMY_APPSERVER_LOGIN" Disabled="yes" />
-                <Control Id="label1" Type="Text" Height="17" Width="74" X="20" Y="65" Text="Login" />
-                <Control Id="label2" Type="Text" Height="17" Width="74" X="20" Y="83" Text="Create Password" />
-                <Control Id="label3" Type="Text" Height="17" Width="74" X="20" Y="100" Text="Confirm Password" />
-                <Control Id="groupBox2" Type="GroupBox" Height="39" Width="351" X="10" Y="129" Text="Extra parameters" />
-                <Control Id="checkBox1" Type="CheckBox" Height="18" Width="340" X="20" Y="143" Text="Allow system to optimize cameras settings (Recommended)" Property="ALLOW_CAMERA_CHANGES_REF2" Indirect="yes" CheckBoxValue="1"/>
+                <Control Id="label1" Type="Text" Height="17" Width="74" X="20" Y="65" Text="!(loc.PasswordDlg_LoginLabel)" />
+                <Control Id="label2" Type="Text" Height="17" Width="74" X="20" Y="83" Text="!(loc.PasswordDlg_PasswordLabel)" />
+                <Control Id="label3" Type="Text" Height="17" Width="74" X="20" Y="100" Text="!(loc.PasswordDlg_ConfirmPasswordLabel)" />
+                <Control Id="groupBox2" Type="GroupBox" Height="39" Width="351" X="10" Y="129" Text="!(loc.AppServerDlg_ExtraParameters)" />
+                <Control Id="checkBox1" Type="CheckBox" Height="18" Width="340" X="20" Y="143" Text="!(loc.AppServerDlg_OptimizeCamerasSettings)" Property="ALLOW_CAMERA_CHANGES_REF2" Indirect="yes" CheckBoxValue="1"/>
             </Dialog>
         </UI>
     </Fragment>
