--- a/wixsetup/maven/filter-resources/UpgradeDlg.wxs
+++ b/wixsetup/maven/filter-resources/UpgradeDlg.wxs
@@ -11,9 +11,9 @@
 													<Control Id="BannerLine" Type="Line" X="0" Y="44" Width="370" Height="2" />
 													<Control Id="BannerBitmap" Type="Bitmap" X="0" Y="0" Width="370" Height="44" TabSkip="no" Text="!(loc.InstallDirDlgBannerBitmap)" />
 													<Control Id="BottomLine" Type="Line" X="0" Y="234" Width="370" Height="2" />
-													<Control Id="Description" Type="Text" X="25" Y="23" Width="280" Height="15" Transparent="yes" NoPrefix="yes" Text="Previous version detected" />
-													<Control Id="Title" Type="Text" X="15" Y="6" Width="210" Height="15" Transparent="yes" NoPrefix="yes" Text="Installation Type" />
-													<Control Id="label1" Type="Text" Height="47" Width="337" X="15" Y="50" Text="Your system is going to be upgraded" />
+													<Control Id="Description" Type="Text" X="25" Y="23" Width="280" Height="15" Transparent="yes" NoPrefix="yes" Text="!(loc.UpgradeDlg_PreviousDetected)" />
+													<Control Id="Title" Type="Text" X="15" Y="6" Width="210" Height="15" Transparent="yes" NoPrefix="yes" Text="!(loc.UpgradeDlg_InstallationType)" />
+													<Control Id="label1" Type="Text" Height="47" Width="337" X="15" Y="50" Text="!(loc.UpgradeDlg_UpgradeMessage)" />
 												</Dialog>
         </UI>
     </Fragment>
