--- a/wixsetup/maven/filter-resources/Product-full.wxs
+++ b/wixsetup/maven/filter-resources/Product-full.wxs
@@ -671,7 +671,7 @@
                                 </Component>
 
                                 <Component Id="VmaxProxyQTLibraries">
-                                    <File Id="VmaxProxyQt5Core$(var.suffix).dll" Name="Qt5Core$(var.suffix).dll" Source="$(var.SourceDir)/Qt5Core$(var.suffix).dll"  />
+                                    <File Id="VmaxProxyQt5Core$(var.suffix).dll" Name="Qt5Core$(var.suffix).dll" Source="$(var.SourceDir)/vmaxproxy/Qt5Core$(var.suffix).dll"  />
                                 </Component>
                             </Directory>
 
