mirrorListUrl is set properly in the installer
<==== Mercurial data ====>
Branch: release_2.2

--- a/wixsetup/maven/filter-resources/Client.wxs
+++ b/wixsetup/maven/filter-resources/Client.wxs
@@ -28,7 +28,7 @@
                         </RegistryKey>
                         <RegistryKey Root="HKCU"
                                  Key="Software\[Manufacturer]\${applauncher.name}">
-                            <RegistryValue Type="string" Name="mirrorListUrl" Value="http://enk.me/clients/mirror.xml"/>
+                            <RegistryValue Type="string" Name="mirrorListUrl" Value="${mirrorListUrl}"/>
                         </RegistryKey>                        
                     </Component>                                
 
