--- a/wixsetup/maven/filter-resources/Client.wxs
+++ b/wixsetup/maven/filter-resources/Client.wxs
@@ -26,7 +26,7 @@
                                  Key="Software\[Manufacturer]\${applauncher.name}">
                             <RegistryValue Type="string" Name="previousLaunchedVersion" Value="${parsedVersion.majorVersion}.${parsedVersion.minorVersion}"/>
                         </RegistryKey>
-                        <RegistryKey Root="HKCU"
+                        <RegistryKey Root="HKLM"
                                  Key="Software\[Manufacturer]\${applauncher.name}">
                             <RegistryValue Type="string" Name="mirrorListUrl" Value="${mirrorListUrl}"/>
                         </RegistryKey>                        
