email templates for future use - encoding corrected
<==== Mercurial data ====>
Branch: release_2.2

--- a/common/maven/bin-resources/for_future_use/email_templates_ru/camera_disconnect.mustache
+++ b/common/maven/bin-resources/for_future_use/email_templates_ru/camera_disconnect.mustache
@@ -1,6 +1,6 @@
-<div class="content"><table>
+п»ї<div class="content"><table>
     <div class="details">
-        <h4>Дата и время потери соединения:</h4>
+        <h4>Р”Р°С‚Р° Рё РІСЂРµРјСЏ РїРѕС‚РµСЂРё СЃРѕРµРґРёРЅРµРЅРёСЏ:</h4>
         <ul>
         {{#aggregated}}
         <li><i>{{timestamp}}</i></li>
