--- a/common/maven/bin-resources/for_future_use/email_templates_ru/camera_input.mustache
+++ b/common/maven/bin-resources/for_future_use/email_templates_ru/camera_input.mustache
@@ -1,10 +1,10 @@
-<div class="content">
+п»ї<div class="content">
     <div class="callout">
-        <h4>Тревожный вход:</h4>
+        <h4>РўСЂРµРІРѕР¶РЅС‹Р№ РІС…РѕРґ:</h4>
         <table class="details">
             <tr>
-                <th>Порт</th>
-                <th>Время</th>
+                <th>РџРѕСЂС‚</th>
+                <th>Р’СЂРµРјСЏ</th>
             </tr>
             {{#aggregated}}
                 <tr><td>{{inputPort}}</td>
