--- a/common/maven/bin-resources/for_future_use/email_templates_ru/camera_ip_conflict.mustache
+++ b/common/maven/bin-resources/for_future_use/email_templates_ru/camera_ip_conflict.mustache
@@ -1,11 +1,11 @@
-{{#aggregated}}
+п»ї{{#aggregated}}
 <div class="content">
     <div class="callout">
-        <p>Обнаружен конфликт для адреся {{cameraConflictAddress}} в {{timestamp}}:</p>
+        <p>РћР±РЅР°СЂСѓР¶РµРЅ РєРѕРЅС„Р»РёРєС‚ РґР»СЏ Р°РґСЂРµСЃСЏ {{cameraConflictAddress}} РІ {{timestamp}}:</p>
         <table class="details">
             <tr>
-                <th>Номер</th>
-                <th>Физический IP адрес</th>
+                <th>РќРѕРјРµСЂ</th>
+                <th>Р¤РёР·РёС‡РµСЃРєРёР№ IP Р°РґСЂРµСЃ</th>
             </tr>
             {{#cameraConflicts}}
                 <tr>
