--- a/common/maven/bin-resources/for_future_use/email_templates_ru/camera_motion.mustache
+++ b/common/maven/bin-resources/for_future_use/email_templates_ru/camera_motion.mustache
@@ -1,6 +1,6 @@
-<div class="content">
+п»ї<div class="content">
     <div class="callout">
-        <h4>Дата и время детекции движения:</h4>
+        <h4>Р”Р°С‚Р° Рё РІСЂРµРјСЏ РґРµС‚РµРєС†РёРё РґРІРёР¶РµРЅРёСЏ:</h4>
         {{#aggregated}}
         <table class="details">
             <tr>
@@ -15,4 +15,3 @@
     </div>
 {{/screenshot}}
 </div>
-
