--- a/common/maven/bin-resources/for_future_use/email_templates_ru/mediaserver_conflict.mustache
+++ b/common/maven/bin-resources/for_future_use/email_templates_ru/mediaserver_conflict.mustache
@@ -1,11 +1,11 @@
-{{#aggregated}}
+п»ї{{#aggregated}}
 <div class="content">
     <div class="callout">
-        <p>Обнаружен конфликт в: {{timestamp}}</p>
+        <p>РћР±РЅР°СЂСѓР¶РµРЅ РєРѕРЅС„Р»РёРєС‚ РІ: {{timestamp}}</p>
         <table class="details">
             <tr>
-                <th>Номер</th>
-                <th>IP-адрес Enterprise Controller'а</th>
+                <th>РќРѕРјРµСЂ</th>
+                <th>IP-Р°РґСЂРµСЃ Enterprise Controller'Р°</th>
             </tr>
                 {{#msConflicts}}
                     <tr>
