--- a/common/maven/bin-resources/for_future_use/email_templates_ru/mediaserver_failure.mustache
+++ b/common/maven/bin-resources/for_future_use/email_templates_ru/mediaserver_failure.mustache
@@ -1,10 +1,10 @@
-<div class="content">
+п»ї<div class="content">
     <div class="callout">
-        <h4>Информация об отказе Медиа Сервера:</h4>
+        <h4>РРЅС„РѕСЂРјР°С†РёСЏ РѕР± РѕС‚РєР°Р·Рµ РњРµРґРёР° РЎРµСЂРІРµСЂР°:</h4>
         <table class="details">
             <tr>
-                <th>Причина</th>
-                <th>Время</th>
+                <th>РџСЂРёС‡РёРЅР°</th>
+                <th>Р’СЂРµРјСЏ</th>
             </tr>
             {{#aggregated}}
                 <tr>
