--- a/common/maven/bin-resources/for_future_use/email_templates_ru/network_issue.mustache
+++ b/common/maven/bin-resources/for_future_use/email_templates_ru/network_issue.mustache
@@ -1,10 +1,10 @@
-<div class="content">
+п»ї<div class="content">
     <div class="callout">
-        <h4>Детали:</h4>
+        <h4>Р”РµС‚Р°Р»Рё:</h4>
         <table class="details">
             <tr>
-                <th>Причина</th>
-                <th>Время</th>
+                <th>РџСЂРёС‡РёРЅР°</th>
+                <th>Р’СЂРµРјСЏ</th>
             </tr>
             {{#aggregated}}
                 <tr>
