fixed debug installer
<==== Mercurial data ====>
Branch: release_2.2

--- a/wixsetup/maven/filter-resources/Product-client-only.wxs
+++ b/wixsetup/maven/filter-resources/Product-client-only.wxs
@@ -82,7 +82,7 @@
                             Win64="no"/>
         </Property>
 
-        <Binary Id="CustomActions.dll" SourceFile="CustomActions\${build.configuration}\CustomActions.dll" />
+        <Binary Id="CustomActions.dll" SourceFile="CustomActions\Release\CustomActions.dll" />
 
         <!-- Custom actions -->
         <CustomAction Id="ResetPreselected" Property="Preselected" Value="" />
@@ -159,7 +159,7 @@
         <DirectoryRef Id="TARGETDIR">
             <Merge Id="VCRedist1" SourceFile="$(var.commonProgramFiles)Merge Modules\Microsoft_VC110_CRT_${arch}.msm" DiskId="1" Language="0"/>
             <!-- <Merge Id="VCRedist2" SourceFile="$(var.commonProgramFiles)Merge Modules\policy_11_0_Microsoft_VC110_CRT_${arch}.msm" DiskId="1" Language="0"/> -->
-            <?if ${build.configuration} = Debug ?>
+            <?if ${build.configuration} = debug ?>
             <Merge Id="VCRedist3" SourceFile="$(var.commonProgramFiles)Merge Modules\Microsoft_VC110_DebugCRT_${arch}.msm" DiskId="1" Language="0"/>
             <!-- <Merge Id="VCRedist4" SourceFile="$(var.commonProgramFiles)Merge Modules\policy_11_0_Microsoft_VC110_DebugCRT_${arch}.msm" DiskId="1" Language="0"/> -->
             <?endif?>
@@ -168,7 +168,7 @@
         <Feature Id="VCRedist" Title="Visual C++ 11.0 Runtime" AllowAdvertise="no" Display="hidden" Level="1">
             <MergeRef Id="VCRedist1"/>
             <!-- <MergeRef Id="VCRedist2"/> -->
-            <?if ${build.configuration} = Debug ?>
+            <?if ${build.configuration} = debug ?>
             <MergeRef Id="VCRedist3"/>
             <!-- <MergeRef Id="VCRedist4"/> -->
             <?endif?>
