--- a/client/src/ui/widgets/properties/fisheye_settings_widget.ui
+++ b/client/src/ui/widgets/properties/fisheye_settings_widget.ui
@@ -69,7 +69,7 @@
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="tickPosition">
-        <enum>QSlider::TicksBelow</enum>
+        <enum>QSlider::NoTicks</enum>
        </property>
       </widget>
      </item>
