update help IDs
<==== Mercurial data ====>
Branch: release_2.2

--- a/client/src/ui/dialogs/ptz_manage_dialog.ui
+++ b/client/src/ui/dialogs/ptz_manage_dialog.ui
@@ -175,7 +175,7 @@
        <number>0</number>
       </property>
       <item>
-       <widget class="QGroupBox" name="groupBox">
+       <widget class="QGroupBox" name="tourGroupBox">
         <property name="title">
          <string>Details</string>
         </property>
