--- a/client/src/ui/dialogs/server_settings_dialog.ui
+++ b/client/src/ui/dialogs/server_settings_dialog.ui
@@ -29,7 +29,7 @@
      <item row="0" column="1">
       <widget class="QLineEdit" name="nameLineEdit"/>
      </item>
-     <item row="1" column="0">
+     <item row="2" column="0">
       <widget class="QLabel" name="ipAddressLabel">
        <property name="text">
         <string>IP Address:</string>
@@ -39,7 +39,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
+     <item row="2" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QLineEdit" name="ipAddressLineEdit">
@@ -63,7 +63,7 @@
        </item>
       </layout>
      </item>
-     <item row="2" column="0">
+     <item row="3" column="0">
       <widget class="QLabel" name="portLabel">
        <property name="text">
         <string>Port:</string>
@@ -73,13 +73,33 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
+     <item row="3" column="1">
       <widget class="QLineEdit" name="portLineEdit">
        <property name="text">
         <string>9000</string>
        </property>
        <property name="readOnly">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="maxCamerasLabel">
+       <property name="text">
+        <string>Max. cameras:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QSpinBox" name="maxCamerasSpinBox">
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>256</number>
+       </property>
+       <property name="value">
+        <number>1</number>
        </property>
       </widget>
      </item>
@@ -157,16 +177,7 @@
       <property name="spacing">
        <number>0</number>
       </property>
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
+      <property name="margin">
        <number>0</number>
       </property>
       <item>
@@ -262,6 +273,17 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>nameLineEdit</tabstop>
+  <tabstop>maxCamerasSpinBox</tabstop>
+  <tabstop>ipAddressLineEdit</tabstop>
+  <tabstop>pingButton</tabstop>
+  <tabstop>portLineEdit</tabstop>
+  <tabstop>storagesTable</tabstop>
+  <tabstop>rebuildStartButton</tabstop>
+  <tabstop>buttonBox</tabstop>
+  <tabstop>rebuildStopButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
  <slots>
