--- a/client/src/ui/dialogs/add_camera_bookmark_dialog.ui
+++ b/client/src/ui/dialogs/add_camera_bookmark_dialog.ui
@@ -38,12 +38,12 @@
         <string>&amp;Description</string>
        </property>
        <property name="buddy">
-        <cstring>plainTextEdit</cstring>
+        <cstring>descriptionTextEdit</cstring>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QPlainTextEdit" name="plainTextEdit"/>
+      <widget class="QPlainTextEdit" name="descriptionTextEdit"/>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="colorLabel">
@@ -77,7 +77,7 @@
         <string>T&amp;ags</string>
        </property>
        <property name="buddy">
-        <cstring>lineEdit</cstring>
+        <cstring>tagsLineEdit</cstring>
        </property>
       </widget>
      </item>
@@ -97,7 +97,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QLineEdit" name="tagsLineEdit"/>
         </item>
         <item>
          <widget class="QLabel" name="tagsListLabel">
@@ -180,7 +180,7 @@
  </widget>
  <tabstops>
   <tabstop>nameLineEdit</tabstop>
-  <tabstop>plainTextEdit</tabstop>
+  <tabstop>descriptionTextEdit</tabstop>
   <tabstop>colorComboBox</tabstop>
   <tabstop>comboBox</tabstop>
   <tabstop>buttonBox</tabstop>
