--- a/client/src/ui/dialogs/camera_bookmark_dialog.ui
+++ b/client/src/ui/dialogs/camera_bookmark_dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>QnAddCameraBookmarkDialog</class>
- <widget class="QDialog" name="QnAddCameraBookmarkDialog">
+ <class>QnCameraBookmarkDialog</class>
+ <widget class="QDialog" name="QnCameraBookmarkDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Bookmark</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
