--- a/client/src/ui/dialogs/camera_bookmark_dialog.ui
+++ b/client/src/ui/dialogs/camera_bookmark_dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>556</width>
-    <height>481</height>
+    <width>401</width>
+    <height>290</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,32 +46,19 @@
       <widget class="QPlainTextEdit" name="descriptionTextEdit"/>
      </item>
      <item row="2" column="0">
-      <widget class="QLabel" name="colorLabel">
-       <property name="text">
-        <string>&amp;Color</string>
-       </property>
-       <property name="buddy">
-        <cstring>colorComboBox</cstring>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QComboBox" name="colorComboBox"/>
-     </item>
-     <item row="3" column="0">
       <widget class="QLabel" name="timeoutLabel">
        <property name="text">
         <string>&amp;Timeout</string>
        </property>
        <property name="buddy">
-        <cstring>comboBox</cstring>
+        <cstring>timeoutComboBox</cstring>
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QComboBox" name="comboBox"/>
+     <item row="2" column="1">
+      <widget class="QComboBox" name="timeoutComboBox"/>
      </item>
-     <item row="4" column="0">
+     <item row="3" column="0">
       <widget class="QLabel" name="tagsLabel">
        <property name="text">
         <string>T&amp;ags</string>
@@ -81,7 +68,7 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="3" column="1">
       <widget class="QWidget" name="tagsWidget" native="true">
        <layout class="QVBoxLayout" name="verticalLayout">
         <property name="leftMargin">
@@ -132,8 +119,7 @@
  <tabstops>
   <tabstop>nameLineEdit</tabstop>
   <tabstop>descriptionTextEdit</tabstop>
-  <tabstop>colorComboBox</tabstop>
-  <tabstop>comboBox</tabstop>
+  <tabstop>timeoutComboBox</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
