--- a/client/src/ui/dialogs/camera_bookmark_dialog.ui
+++ b/client/src/ui/dialogs/camera_bookmark_dialog.ui
@@ -30,7 +30,11 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="nameLineEdit"/>
+      <widget class="QLineEdit" name="nameLineEdit">
+       <property name="text">
+        <string>Bookmark</string>
+       </property>
+      </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="descriptionLabel">
@@ -84,7 +88,11 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QLineEdit" name="tagsLineEdit"/>
+         <widget class="QLineEdit" name="tagsLineEdit">
+          <property name="placeholderText">
+           <string>List of tags divided by commas or spaces</string>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QLabel" name="tagsListLabel">
